# faxlab-tools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.datalad/: config
.datalad/procedures/: update-local-envs.sh
.github/templates/.components/: changes.md.j2  macros.md.j2
.github/workflows/: ci-cd.yml  ci.yml  cleanup-prerelease-tags.yml  cleanup-rc-tags.yml  link-to-project.yml
docs/dev/: 01-initialize-the-repo.md
src/faxlab-tools/: __init__.py  _logger.py
src/faxlab-tools/io/: tabular.py
src/faxlab-tools/tables/: sanitization.py
src/faxlab-tools/utils/: parameters.py
src/faxlab_tools/: __init__.py  __version__.py  logger.py
src/faxlab_tools/io/: __init__.py  tabular.py
src/faxlab_tools/tables/: sanitization.py  slicing.py
src/faxlab_tools/utils/: __init__.py  files.py  logger.py  parameters.py
tests/: test_dtype_dict.csv  test_sample_df.csv  test_tables.py
