[project]
name = "faxlab-tools"
version = "0.1.0"
description = "A python library of tools useful for reproducible research, built upon the FacsimiLab philosophy."
readme = "README.md"
authors = [
    { name = "Pranav Kumar Mishra", email = "62562712+pranavmishra90@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faxlab-tools"]

[dependency-groups]
dev = [
    "datalad>=1.2.1",
    "pre-commit>=4.2.0",
    "python-semantic-release>=10.2.0",
    "ruff>=0.12.2",
]
